[metadata]
name = autosat
version = 0.0.0
author = Peter Schmidt-Nielsen
author_email = schmidtnielsenpeter@gmail.com
description = A library for creating SAT instances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petersn/autosat
project_urls =
    Bug Tracker = https://github.com/petersn/autosat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
